# lumina-constellation

./: .env.example  .gitignore  .moosenet-repo.toml  AGENTS.md  CITATIONS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SECURITY.md  migration-report.md
.cargo/: config.toml
crates/chord-proxy/: Cargo.toml
crates/chord-proxy/src/: audit.rs  auth.rs  catalog.rs  config.rs  control.rs  error.rs  fallback.rs  lib.rs  main.rs  mcp_proxy.rs  middleware.rs  rate_limiter.rs  routes.rs  session.rs
crates/chord-proxy/src/agentic/: argument_guard.rs  behavioral_monitor.rs  context.rs  harness_integration.rs  loop_runner.rs  mod.rs  model_router.rs  permissions.rs  response_guard.rs  result_guard.rs  streaming.rs  synthesis.rs
crates/chord-proxy/src/harness/: actions.rs  detector.rs  executor.rs  mod.rs  state.rs  tool_definition.rs  vram_lifecycle.rs
crates/chord-proxy/src/models/: eviction.rs  mod.rs  registry.rs  transfer.rs
crates/chord-proxy/tests/: e2e.rs
crates/lumina-core/: Cargo.toml
crates/lumina-core/src/: agent_loop.rs  audit_log.rs  caldav.rs  chord.rs  chord_lifecycle.rs  config.rs  conversation.rs  dashboard.rs  egress_inspector.rs  error.rs  hardening.rs  http_server.rs  input_guard.rs  lib.rs  main.rs  matrix_bot.rs  matrix_format.rs  mcp_client.rs  nexus.rs  pwa.rs  retrain_scheduler.rs  router.rs  router_rules.rs  secure_string.rs  sentinel.rs  tool_builder.rs  tool_discovery.rs  tool_gate.rs  tool_resolver.rs  tool_types.rs  train_cli.rs  training_store.rs  user_config.rs  wasm_sandbox.rs
crates/lumina-core/src/channels/: cli.rs  http.rs  matrix.rs  matrix_commands.rs  mod.rs  telegram.rs
crates/lumina-core/src/connectors/: actual.rs  grocy.rs  jellyseerr.rs  lubelogger.rs  mod.rs
crates/lumina-core/src/conversation/: buffer.rs  engram_flush.rs  summarizer.rs
crates/lumina-core/src/email/: imap_client.rs  mod.rs  summarizer.rs
crates/lumina-core/src/engram/: archive.rs  cli.rs  embedding_security.rs  fts.rs  hybrid_search.rs  ingest.rs  lifecycle.rs  migration.rs  mod.rs  operational.rs  principles.rs  privacy.rs  prompts.rs  provenance.rs  research_ingest.rs  retrieval.rs  retroactive.rs  secure_delete.rs  secure_export.rs  secure_memory.rs  shared.rs  side_channel_defense.rs  temporal.rs  transit_security.rs  types.rs
crates/lumina-core/src/feeds/: finance.rs  mod.rs  news.rs
crates/lumina-core/src/onboarding/: mod.rs  questions.rs
crates/lumina-core/src/prompt/: active_context.rs  behavioral_analysis.rs  consolidation_log.rs  engagement.rs  knowledge_digest.rs  layers.rs  llm.rs  mod.rs  multi_personality.rs  opinions.rs  personality_vector.rs  proactive.rs  pulse.rs  retrieval_layer.rs  retrieval_reflexa.rs  sleep_time.rs  trait_tuner.rs  traits.rs
crates/lumina-core/src/scheduler/: cron.rs  events.rs  mod.rs  routine.rs
crates/lumina-core/src/security/: audit_logger.rs  auth_manager.rs  input_validator.rs  mod.rs  network_security.rs  output_filter.rs  rate_limiter.rs
crates/lumina-core/src/skill_hub/: clawhub.rs  installer.rs  mod.rs  moltbook.rs  scanner.rs
crates/lumina-core/src/skills/: mod.rs  skill_generator.rs  skill_store.rs
crates/lumina-core/src/soma/: mod.rs
crates/lumina-core/src/users/: cli.rs  cost_caps.rs  identity.rs  matrix_commands.rs  mod.rs  permissions.rs  settings.rs  shared_resources.rs  vault_service.rs
crates/lumina-core/src/vault/: format.rs  key_provider.rs  mod.rs  wizard.rs
crates/lumina-core/src/vigil/: briefing.rs  config.rs  evening.rs  mod.rs
crates/lumina-core/src/web/: extractor.rs  mod.rs  sanitizer.rs  search.rs
crates/lumina-core/tests/: core_loop_integration.rs  integration.rs  phase1_e2e.rs
crates/terminus-rs/: Cargo.toml
crates/terminus-rs/src/: approval.rs  error.rs  lib.rs  registry.rs  tool.rs
crates/terminus-rs/src/ansible/: mod.rs
crates/terminus-rs/src/axon/: mod.rs
crates/terminus-rs/src/commute/: mod.rs
crates/terminus-rs/src/dev/: mod.rs
crates/terminus-rs/src/dgem/: batch.rs  generate.rs  mod.rs  review.rs  status.rs  vram.rs
crates/terminus-rs/src/dura/: mod.rs
crates/terminus-rs/src/gateway/: mod.rs
crates/terminus-rs/src/gitea/: mod.rs  types.rs
crates/terminus-rs/src/github/: mod.rs
crates/terminus-rs/src/google/: caldav.rs  imap.rs  mod.rs  smtp.rs
crates/terminus-rs/src/hearth/: mod.rs
crates/terminus-rs/src/infisical/: mod.rs
crates/terminus-rs/src/jellyseerr/: mod.rs
crates/terminus-rs/tests/: tool_tests.rs
(+485 files in other folders)
