[package]
name = "chord-proxy"
version.workspace = true
edition.workspace = true
description = "Chord unified proxy — LLM inference + MCP tool gateway"

[[bin]]
name = "chord-proxy"
path = "src/main.rs"

[lib]
name = "chord_proxy"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
subtle = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-stream = "0.1"
futures-util = "0.3"
terminus-rs = { path = "../terminus-rs" }
once_cell = "1"

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
serial_test = "3"
