[package]
name = "lumina-core"
version.workspace = true
edition.workspace = true

[features]
http = ["dep:axum", "dep:tower", "dep:tower-http"]
telegram = ["dep:teloxide"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = "1.8"
rand = "0.8"
dirs = "5.0"
thiserror = "1.0"
hex = "0.4"
url = "2.5"
matrix-sdk = { version = "0.9", default-features = false, features = ["rustls-tls"] }
regex = "1"
axum = { version = "0.7", optional = true, default-features = false, features = ["http1", "json", "tokio"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace"] }
libc = "0.2"
flate2 = "1"
jsonschema = { version = "0.22", default-features = false }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
uuid = { version = "1", features = ["v4"] }
wasmtime = { version = "24", features = ["cranelift", "runtime"] }
anyhow = "1"
log = "0.4"
async-trait = "0.1"
tempfile = "3"
subtle = "2"
form_urlencoded = "1"
teloxide = { version = "0.13", optional = true, default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
async-imap = { version = "0.11", default-features = false, features = ["tokio", "runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "tls12", "ring", "std"] }
rustls-native-certs = "0.8"
futures = "0.3"

wat = "1"

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
serial_test = "3"
