[package]
name = "terminus-rs"
version.workspace = true
edition.workspace = true
description = "Rust fallback tool implementations for the Chord proxy"

[lib]
name = "terminus_rs"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"], default-features = false }
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1.0"
tracing = "0.1"
# Google tools: IMAP (read), SMTP (send), CalDAV uses reqwest (already present)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "tls12", "ring", "std"] }
rustls-native-certs = "0.8"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder", "ring"] }

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
serial_test = "3"
